// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`account page account information displays basic user information 1`] = `
<dl class="account-page-info oc-flex oc-flex-wrap">
  <div class="account-page-info-username oc-mb oc-width-1-2@s">
    <dt class="oc-text-normal oc-text-muted">Username</dt>
    <dd>

    </dd>
  </div>
  <!---->
  <div class="account-page-info-displayname oc-mb oc-width-1-2@s">
    <dt class="oc-text-normal oc-text-muted">Display name</dt>
    <dd>

    </dd>
  </div>
  <div class="account-page-info-email oc-mb oc-width-1-2@s">
    <dt class="oc-text-normal oc-text-muted">Email</dt>
    <dd>
      <span>No email has been set up</span>
    </dd>
  </div>
  <div class="account-page-info-groups oc-mb oc-width-1-2@s">
    <dt class="oc-text-normal oc-text-muted">Group memberships</dt>
    <dd>
      <span>You are not part of any group</span>
    </dd>
  </div>
</dl>
`;

exports[`account page account information group membership displays group names 1`] = `
<dd>
  <span>one, two, three</span>
</dd>
`;

exports[`account page header section edit buttons edit route button should be displayed if running with ocis and has navItems 1`] = `
<oc-button-stub appearance="outline" gapsize="medium" justifycontent="center" size="medium" submit="button" to="some-route" type="router-link" variation="primary">
  <oc-icon-stub accessiblelabel color filltype="fill" name="edit" size="medium" type="span" variation="passive"></oc-icon-stub>
  <span>Edit</span>
</oc-button-stub>
`;

exports[`account page header section edit buttons edit url button should be displayed if not running with ocis 1`] = `
<oc-button-stub appearance="outline" gapsize="medium" href="/index.php/settings/personal" justifycontent="center" size="medium" submit="button" type="a" variation="primary">
  <oc-icon-stub accessiblelabel color filltype="fill" name="edit" size="medium" type="span" variation="passive"></oc-icon-stub>
  <span>Edit</span>
</oc-button-stub>
`;
